# minrzbas

./: .gitignore  CMakeLists.txt  README.md
include/: Program.hpp
include/minrzbas/: Generator.hpp  Parser.hpp  Program.hpp  Thing.hpp
include/utils/: FileUtils.hpp  JSON.hpp  Misc.hpp
src/: CMakeLists.txt  EntryPoint.cpp  Generator.cpp  Parser.cpp  Program.cpp  Thing.cpp
src/utils/: FileUtils.cpp  JSON.cpp  Misc.cpp
tests/include/: Common.hpp  TestTempl.hpp
tests/python/: parsing.py
tests/resources/: parsing.json  parsing_temp.json
tests/resources/configTest/include/: Printer.hpp
tests/resources/configTest/include/acs/: Animal.hpp
tests/resources/configTest/include/animals/: Human.hpp
tests/resources/dirs/: filtering.json  list.json  parsing.json
tests/resources/expected/: Aliases.json  AttributesClasses.json  AttributesEnums.json  AttributesFields.json  AttributesNestedClass.json  AttributesStructs.json  AttributesUnions.json  AttributesVariables.json  Bases.json  Classes.json  Constructors.json  Define.json  Destructors.json  Fields.json  FriendsClass.json  Functions.json  Human.json  Includes.json  Methods.json  MultipleIncludeDirs.json  Namespaces.json  NestedClass.json  RelIncludes.json  RelIndirectIncludes.json  Structs.json  Unions.json  Variables.json
tests/resources/generalProject1/include/: All.hpp  Printer.hpp
tests/resources/generalProject1/include/acs/: Animal.hpp
tests/resources/generalProject1/include/animals/: Human.hpp  Otter.hpp
tests/resources/json/: parseopts.json
tests/resources/proj1/include/: Aliases.hpp  Attributes.hpp  AttributesBases.hpp  AttributesClasses.hpp  AttributesEnums.hpp  AttributesFields.hpp  AttributesNestedClass.hpp  AttributesStructs.hpp  AttributesUnions.hpp  AttributesVariables.hpp  Bases.hpp  Classes.hpp  Constructors.hpp  Define.hpp  Destructors.hpp  Enums.hpp  Fields.hpp  FriendsClass.hpp  Functions.hpp  Includes.hpp  Methods.hpp  MultipleDefines.hpp  MultipleIncludeDirs.hpp  Namespaces.hpp  NestedClass.hpp  RelIncludes.hpp  RelIndirectIncludes.hpp  Structs.hpp  Unions.hpp  Variables.hpp
tests/resources/proj1/sys/: NonEmpty.hpp
tests/resources/testProject1/include/: Printer.hpp
tests/resources/tests/: parsing.json
tests/resources/tests/expected/: Functions.json
tests/resources/tests/lists/: Animal.json
tests/src/: CMakeLists.txt  ClassesTest.cpp  Common.cpp  CurrentType.cpp  FilteringTest.cpp  ParsingTest.cpp  Program.cpp  TemplAccessTest.cpp  ThingTest.cpp
